category api added

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_USER=doctors-portal   
-DB_PASSWORD=2uEk6hXiLcDgInei
+DB_USER=furnitureMart    
+DB_PASSWORD=2FhaNGhL3xV0cXQd
 ACCESS_TOKEN_SECRET=
